[package]
name = "RustMC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "rustmc-blocks",
    "rustmc-derives",
    "rustmc-entities",
    "rustmc-errors",
    "rustmc-nbt",
    "rustmc-packets",
    "rustmc-plugin",
    "rustmc-server",
    "rustmc-utils",
]

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }

rustmc-server = { path = "rustmc-server" }