[package]
name = "rustmc-packets"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
env_logger = "0.10.1"
log = "0.4.20"
once_cell = "1.18.0"
